[package]
name = "cosmic-app-template"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]

[dependencies]
bluer = "0.17.3"
futures = "0.3"
i18n-embed-fl = "0.9.1"
once_cell = "1.19.0"
open = "5.1.3"
rust-embed = "8.3.0"
tokio = { version = "1.37.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[dependencies.i18n-embed]
version = "0.15.0"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# Cargo deb
# Edit here to customize the package metadata
# Especially the Assets section
[package.metadata.deb]
maintainer = "Your Name, <your@email.com>"
copyright = "2024 Your Name"
# license-file = "LICENSE"
extended-description = """\
Describe your app here. \
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/cosmic-app-template",
        "usr/bin/cosmic-app-template",
        "755",
    ],
    [
        "res/com.example.CosmicAppTemplate.metainfo.xml",
        "usr/share/metainfo/com.example.CosmicAppTemplate.metainfo.xml",
        "644",
    ],
    [
        "res/com.example.CosmicAppTemplate.desktop",
        "usr/share/applications/com.example.CosmicAppTemplate.desktop",
        "644",
    ],
    #    ["res/icons/hicolor/", "usr/share/icons/hicolor/", "644"]
]
